# haskell-flappy-bird

./: README.md  docker-compose.yaml  haskell-flappy-bird.cabal  package.yaml  setup_precommit.sh
.github/workflows/: client-docker-image.yml  leaderboard-docker-image.yml
app/: Main.hs
game/: .dockerignore  Dockerfile  README.md  haskell-flappy-bird.cabal  package.yaml  stack-js.yaml  stack.yaml
game/src/: Project.hs
game/src/Game/: Constants.hs  Data.hs  Draw.hs  Game.hs  Utils.hs
game/web/: index.html
leaderboard/: .gitignore  Dockerfile  leaderboard.cabal  package.yaml  stack.yaml
leaderboard/app/: Main.hs
leaderboard/src/: Example.hs  Leaderboard.hs  Model.hs
src/: Project.hs
src/Game/: Game.hs
